<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.3</version>
	</parent>

	<groupId>no.nav.dokdistadmin</groupId>
	<artifactId>dokdistadmin</artifactId>
	<packaging>pom</packaging>
	<version>1.0-SNAPSHOT</version>

	<modules>
		<module>app</module>
		<module>core</module>
		<module>rdist001</module>
	</modules>

	<properties>
		<java.version>25</java.version>

		<logstash-logback-encoder.version>9.0</logstash-logback-encoder.version>
		<token-support.version>6.0.4</token-support.version>
		<dok-legacy-tjenestespesifikasjoner.version>44-7d14e70</dok-legacy-tjenestespesifikasjoner.version>
		<mq-jms-spring-boot-starter.version>4.0.2</mq-jms-spring-boot-starter.version>

		<!-- Test -->
		<wiremock-spring-boot.version>4.0.9</wiremock-spring-boot.version>
		<datasource-proxy-spring-boot-starter.version>2.0.0</datasource-proxy-spring-boot-starter.version>

		<!-- Plugins -->
		<maven-toolchains-plugin.version>3.2.0</maven-toolchains-plugin.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>no.nav.dokdistadmin</groupId>
				<artifactId>core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokdistadmin</groupId>
				<artifactId>rdist001</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.security</groupId>
				<artifactId>token-validation-spring</artifactId>
				<version>${token-support.version}</version>
			</dependency>
			<dependency>
				<groupId>net.logstash.logback</groupId>
				<artifactId>logstash-logback-encoder</artifactId>
				<version>${logstash-logback-encoder.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.meldinger.virksomhet</groupId>
				<artifactId>dok-melding-virksomhet-dokdistfordeling</artifactId>
				<version>${dok-legacy-tjenestespesifikasjoner.version}</version>
			</dependency>
			<dependency>
				<groupId>com.ibm.mq</groupId>
				<artifactId>mq-jms-spring-boot-starter</artifactId>
				<version>${mq-jms-spring-boot-starter.version}</version>
			</dependency>

			<!-- Test -->
			<dependency>
				<groupId>org.wiremock.integrations</groupId>
				<artifactId>wiremock-spring-boot</artifactId>
				<version>${wiremock-spring-boot.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>no.nav.security</groupId>
				<artifactId>token-validation-spring-test</artifactId>
				<version>${token-support.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>com.github.gavlyukovskiy</groupId>
				<artifactId>datasource-proxy-spring-boot-starter</artifactId>
				<version>${datasource-proxy-spring-boot-starter.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-toolchains-plugin</artifactId>
				<version>${maven-toolchains-plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>toolchain</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<toolchains>
						<jdk>
							<version>${java.version}</version>
							<vendor>openjdk</vendor>
						</jdk>
					</toolchains>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok.version}</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>